# procomp

./: .env.pages.example  .env.production.example  .env.staging.example  .gitignore  MATCH_EVENT_SYSTEM_IMPLEMENTATION.md  Makefile  PAYMENT_MODULE_README.md  README.md  README_BACKEND_REALTIME.md  README_DEPLOY.md  README_PAGES.md  REFEREE_SYSTEM_README.md  docker-compose.staging.yml  package.json  pnpm-lock.yaml  railway.json  tsconfig.json  turbo.json
.github/workflows/: api-ci.yml  db-migrate.yml  e2e.yml  pages.yml  perf.yml  web-ci.yml
apps/api/: AUTH_IMPLEMENTATION.md  Dockerfile  pyproject.toml
apps/api/app/: __init__.py  dependencies.py  main.py
apps/api/app/api/: routes.py  websockets.py
apps/api/app/auth/: __init__.py  jwt_auth.py
apps/api/app/core/: __init__.py  config.py  database.py
apps/api/app/models/: __init__.py  match.py  match_event.py  user.py
apps/api/app/routes/: health.py  payments.py
apps/api/app/services/: __init__.py  match_event_service.py  match_service.py  payment_service.py  user_service.py
apps/api/app/websockets/: hub.py  match_websocket.py
apps/web/: middleware.ts  next.config.js  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vercel.json
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/dashboard/components/: assign-referee-dialog.tsx  match-filters.tsx  match-table.tsx  tournament-selector.tsx
apps/web/app/dashboard/hooks/: use-match-store.ts  use-match-websocket.ts
apps/web/app/hud/[matchId]/: generateStaticParams.ts  page.tsx
apps/web/app/referee/[matchId]/: page.tsx
apps/web/app/register/: page.tsx
apps/web/lib/: api-client.runtime.ts  api-client.ts  playwright.config.ts  runtime.ts  use-match-websocket.runtime.ts  use-tournament-websocket.runtime.ts
apps/web/lib/demo/: api-client.mock.ts  mocks.ts  use-match-websocket.mock.tsx  use-tournament-websocket.mock.tsx
apps/web/public/: 404.html
perf/api/: http_smoke.js
perf/ws/: ws_match_broadcast.js  ws_tournament_broadcast.js
routes/: match_events.py  payments.py  tournaments.py
scripts/: seed.ts  wait-for-services.sh
services/: bracket_service.py
tests/: test_match_service.py  test_match_service_simple.py  test_websocket_hub.py
